--- a/front/src/style/vinos.scss
+++ b/front/src/style/vinos.scss
@@ -103,3 +103,12 @@ nav {
     display: fixed;
     top: 0;
 }
+
+//El css de la imagen del carrito
+.cartImagen{
+    
+    justify-content: flex-end;
+    max-width: 200px;
+
+
+}
