--- a/back/public/style.css
+++ b/back/public/style.css
@@ -4,13 +4,15 @@
 	background-color:#ededed;
 	border-radius:15px;
 	border:1px solid #d6bcd6;
-	display:inline-block;
+	display:flex;
+	justify-content: flex-end;
 	cursor:pointer;
 	color:#3a8a9e;
 	font-family:Arial;
 	font-size:17px;
 	font-weight:bold;
-	padding:7px 14px;
+	padding: 14px;
+	margin-top: 10px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #e1e2ed;
 }
@@ -43,5 +45,16 @@
 	text-align: center;
 	font-size: medium;
 }
+
+.imagenSingle{
+	max-width: 600px;
+	max-height: 1200px;
+}
+
+.single{
+	padding: 10px;
+	border-bottom: solid 1px gray;
+}
+
 
     
