configuracion para registro con facebook

--- a/front/src/style/vinos.scss
+++ b/front/src/style/vinos.scss
@@ -112,3 +112,29 @@ nav {
 
 
 }
+
+.btn-facebook{
+    background-color: white;
+    display: inline-block;
+    border-radius: .25rem;
+    line-height: 30px;
+    margin-bottom: 20px;
+    color: black;
+    padding: .375rem .75rem;
+}
+
+.btn-google{
+    background-color: white;
+    display: inline-block;
+    border-radius: .25rem;
+    line-height: 30px;
+    margin-bottom: 20px;
+    color: black;
+    padding: .375rem .75rem;
+}
+
+.icono{
+    max-width: 30px;
+    line-height: 30px;
+    max-height: 30px;
+}
