--- a/front/src/style/vinos.scss
+++ b/front/src/style/vinos.scss
@@ -23,6 +23,7 @@ body {
 .textoCentrado{
 
     text-align: center;
+    margin-top: 30px;
 
 
 
@@ -137,4 +138,9 @@ nav {
     max-width: 30px;
     line-height: 30px;
     max-height: 30px;
+}
+
+.pagination{
+    display: flex;
+    justify-content: center;
 }
