--- a/front/src/style/vinos.scss
+++ b/front/src/style/vinos.scss
@@ -15,6 +15,21 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr ;
     justify-items: center;
 }
+
+#colBuy {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 50%;
+    justify-items: center;
+    margin-bottom: .7rem;
+    margin-top: .7rem;
+}
+
+#img{
+    max-width: 200px;
+    max-height: 400px;
+}
+
 .navegador{
 
     background-color: #F2F2F2;
@@ -24,9 +39,6 @@ body {
 
     text-align: center;
     margin-top: 30px;
-
-
-
 }
 .botones{
 
@@ -160,6 +172,4 @@ max-height: 33.3%;
 
     border: 2px solid white;
     padding: 2px;
-
-
 }
