--- a/front/src/style/vinos.scss
+++ b/front/src/style/vinos.scss
@@ -17,17 +17,16 @@ body {
 }
 
 #colBuy {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 50%;
-    justify-items: center;
-    margin-bottom: .7rem;
-    margin-top: .7rem;
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+    margin: 50px auto;
+  
 }
 
 #img{
     max-width: 200px;
-    max-height: 400px;
+    max-height: 200px;
 }
 
 .navegador{
